# activity-logs-poc

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
app/: exceptions.py  main.py  middleware.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: __init__.py  admin.py  auth.py  tasks.py  users.py
app/core/: config.py  security.py
app/database/: __init__.py  database.py
app/database/models/: __init__.py  activity.py  base.py  tasks.py  user.py
app/database/scripts/: __init__.py  create_admin.py
app/kafka/: __init__.py  consumer.py  producer.py  registry.py  schemas.py  topics.py
app/repositories/: activity_repository.py  task_repository.py  user_repository.py
app/schemas/: auth.py  task.py  user.py
app/services/: activity_service.py  auth_service.py  task_service.py  user_service.py
app/static/admin/: activity.js
app/static/auth/: login.js
app/templates/admin/: activity.html
app/templates/auth/: login.html
app/websockets/: __init__.py  manager.py  routes.py
